# cpp-kunstkammer

./: .clang-tidy  .gitignore  CMakeLists.txt  LOGGING_README.md  README.md  backlog.json  build.sh  config.json  setup-env.sh  tasks.json
.github/workflows/: cmake-multi-platform.yml
examples/: connection_pool_example.cpp
src/: api_utils.cpp  api_utils.hpp  board_operations.cpp  board_operations.hpp  cache.hpp  card.cpp  card.hpp  card_operations.cpp  card_operations.hpp  card_utils.cpp  card_utils.hpp  config.hpp  connection_pool.cpp  connection_pool.hpp  date.hpp  error.hpp  error_handler.cpp  error_handler.hpp  http_client.cpp  http_client.hpp  kaiten.cpp  kaiten.hpp  logger.cpp  logger.hpp  main.cpp  modes.cpp  modes.hpp  offline_manager.cpp  offline_manager.hpp  pagination.hpp  rate_limiter.cpp  rate_limiter.hpp  user_operations.cpp  user_operations.hpp
test/: connection_pool_test.cpp  offline_manager_test.cpp
